crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaLoraPlan PamojaLoraPlan;
typedef struct PamojaLoraPlanBuilder PamojaLoraPlanBuilder;
typedef struct PamojaLorawanSession PamojaLorawanSession;
typedef struct {
  uint32_t wor_frequency_hz;
  uint32_t ack_frequency_hz;
  uint8_t data_rate;
} PamojaLoraRelayChannel;
typedef struct {
  uint8_t integrity[16];
  uint8_t encryption[16];
} PamojaLorawanWorKeys;
typedef struct {
  uint32_t frequency_hz;
  uint8_t data_rate;
} PamojaLorawanCarrier;
typedef struct {
  uint8_t kind;
  PamojaLorawanCarrier uplink;
  uint32_t dev_addr;
  uint16_t wfcnt;
} PamojaLorawanWor;
typedef struct {
  uint8_t cad_to_rx;
  uint8_t forward;
  uint8_t relay_data_rate;
  uint8_t xtal_accuracy;
  uint8_t cad_periodicity;
  uint16_t t_offset_ms;
} PamojaLorawanStateSync;
typedef struct {
  uint8_t wor_channel;
  int16_t rssi_dbm;
  int8_t snr_db;
  uint8_t data_rate;
} PamojaLorawanUplinkMetadata;
typedef struct {
  uint64_t reference_us;
  uint8_t cad_periodicity;
  uint8_t relay_xtal;
  uint8_t cad_to_rx;
} PamojaLorawanSynchronization;
typedef struct {
  uint64_t start_us;
  uint16_t preamble_symbols;
} PamojaLorawanWorSlot;
PamojaStatus pamoja_lora_plan_relay_channel_count(const PamojaLoraPlan *plan, uint8_t *out_count);
PamojaStatus pamoja_lora_plan_relay_channel(const PamojaLoraPlan *plan,
                                            uint8_t index,
                                            PamojaLoraRelayChannel *out_channel);
PamojaStatus pamoja_lora_plan_builder_add_relay_channel(PamojaLoraPlanBuilder *builder,
                                                        const PamojaLoraRelayChannel *channel);
PamojaStatus pamoja_lorawan_relay_root_wor_s_key(const uint8_t *network_key,
                                                 uintptr_t network_key_len,
                                                 uint8_t *out_key);
PamojaStatus pamoja_lorawan_relay_wor_keys(const uint8_t *root_key,
                                           uintptr_t root_key_len,
                                           uint32_t dev_addr,
                                           PamojaLorawanWorKeys *out_keys);
PamojaStatus pamoja_lorawan_session_root_wor_s_key(const PamojaLorawanSession *session,
                                                   uint8_t *out_key);
PamojaStatus pamoja_lorawan_session_wor_keys(const PamojaLorawanSession *session,
                                             PamojaLorawanWorKeys *out_keys);
PamojaStatus pamoja_lorawan_relay_wor_join_request(const PamojaLorawanCarrier *uplink,
                                                   uint8_t *out_frame);
PamojaStatus pamoja_lorawan_relay_wor_uplink(const PamojaLorawanWorKeys *keys,
                                             uint32_t dev_addr,
                                             uint32_t wfcnt,
                                             const PamojaLorawanCarrier *uplink,
                                             const PamojaLorawanCarrier *wor,
                                             uint8_t *out_frame);
PamojaStatus pamoja_lorawan_relay_wor_parse(const uint8_t *frame,
                                            uintptr_t frame_len,
                                            PamojaLorawanWor *out_wor);
PamojaStatus pamoja_lorawan_relay_wor_open(const uint8_t *frame,
                                           uintptr_t frame_len,
                                           const PamojaLorawanWorKeys *keys,
                                           uint32_t wfcnt,
                                           const PamojaLorawanCarrier *wor,
                                           PamojaLorawanCarrier *out_uplink);
PamojaStatus pamoja_lorawan_relay_wor_ack(const PamojaLorawanWorKeys *keys,
                                          uint32_t dev_addr,
                                          uint32_t wfcnt,
                                          const PamojaLorawanCarrier *ack,
                                          const PamojaLorawanCarrier *uplink,
                                          const PamojaLorawanStateSync *state,
                                          uint8_t *out_frame);
PamojaStatus pamoja_lorawan_relay_wor_ack_open(const uint8_t *frame,
                                               uintptr_t frame_len,
                                               const PamojaLorawanWorKeys *keys,
                                               uint32_t dev_addr,
                                               uint32_t wfcnt,
                                               const PamojaLorawanCarrier *ack,
                                               const PamojaLorawanCarrier *uplink,
                                               PamojaLorawanStateSync *out_state);
PamojaStatus pamoja_lorawan_relay_forward_encode(const PamojaLorawanUplinkMetadata *metadata,
                                                 uint32_t frequency_hz,
                                                 const uint8_t *phy_payload,
                                                 uintptr_t phy_payload_len,
                                                 PamojaBuffer **out_payload);
PamojaStatus pamoja_lorawan_relay_forward_parse(const uint8_t *payload,
                                                uintptr_t payload_len,
                                                PamojaLorawanUplinkMetadata *out_metadata,
                                                uint32_t *out_frequency_hz,
                                                PamojaBuffer **out_phy_payload);
PamojaStatus pamoja_lorawan_relay_unsynchronized_preamble(uint8_t cad_periodicity,
                                                          uint64_t symbol_us,
                                                          uint8_t cad_to_rx,
                                                          uint16_t *out_symbols);
PamojaStatus pamoja_lorawan_relay_t_offset_ms(uint64_t scan_start_us,
                                              uint64_t preamble_end_us,
                                              uint16_t *out_offset_ms);
PamojaStatus pamoja_lorawan_relay_synchronization(uint64_t wor_start_us,
                                                  uint16_t preamble_symbols,
                                                  uint64_t symbol_us,
                                                  const PamojaLorawanStateSync *state,
                                                  PamojaLorawanSynchronization *out_synchronization);
PamojaStatus pamoja_lorawan_relay_next_wor(const PamojaLorawanSynchronization *synchronization,
                                           uint64_t now_us,
                                           uint32_t device_xtal_ppm,
                                           uint64_t symbol_us,
                                           uint8_t other_channel,
                                           PamojaLorawanWorSlot *out_slot,
                                           uint8_t *out_synchronized);
PamojaStatus pamoja_lorawan_relay_second_channel(uint8_t second_channel_index,
                                                 uint8_t data_rate,
                                                 uint8_t ack_offset,
                                                 uint32_t frequency_hz,
                                                 PamojaLoraRelayChannel *out_channel);